--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -17,6 +17,27 @@
   "REJECTED": "Rejected",
   "LOCKED": "Locked",
   "profile": "Profile",
+  "payment": "Payment",
+  "payment error": "Payment error",
+  "Total": "Total",
+  "To": "To",
+  "Contribution Completed": "Contribution Completed",
+  "Thank You": "Thank You",
+  "Dream Pool": "Dream Pool",
+  "KYC Fee": "KYC Fee",
+  "Select Payment Method": "Select Payment Method",
+  "E-Wallet": "E-Wallet",
+  "Bank Transfer": "Bank Transfer",
+  "Total Amount": "Total Amount",
+  "Connect your wallet to proceed": "Connect your wallet to proceed",
+  "Wallet Connected": "Wallet Connected",
+  "Proceed with Payment": "Proceed with Payment",
+  "Connect Wallet": "Connect Wallet",
+  "Scan QR code to transfer": "Scan QR code to transfer",
+  "Please transfer the exact amount to the QR code above": "Please transfer the exact amount to the QR code above",
+  "QR code will be displayed here": "QR code will be displayed here",
+  "I have transferred": "I have transferred",
+  "Cancel": "Cancel",
   "tree": "System",
   "transactions": "Transactions",
   "memberSince": "Member since",
