--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -10,10 +10,28 @@
   "REJECTED": "Không hợp lệ",
   "LOCKED": "Đã khoá",
   "profile": "Hồ sơ",
-  "payment": "Thanh toán",
+  "payment error": "Lỗi thanh toán",
+  "Total": "Tổng cộng",
+  "To": "Đến",
+  "Contribution Completed": "Đóng góp hoàn tất",
+  "Thank You": "Cảm ơn bạn",
+  "Dream Pool": "Giải thưởng Dream Pool",
+  "KYC Fee": "Phí KYC",
+  "Select Payment Method": "Chọn phương thức thanh toán",
+  "E-Wallet": "Ví điện tử",
+  "Bank Transfer": "Chuyển khoản ngân hàng",
+  "Total Amount": "Tổng số tiền",
+  "Connect your wallet to proceed": "Kết nối ví của bạn để tiếp tục",
+  "Wallet Connected": "Đã kết nối ví",
+  "Proceed with Payment": "Tiếp tục thanh toán",
+  "Connect Wallet": "Kết nối ví",
+  "Scan QR code to transfer": "Quét mã QR để chuyển khoản",
+  "Please transfer the exact amount to the QR code above": "Vui lòng chuyển đúng số tiền vào mã QR phía trên",
+  "QR code will be displayed here": "Mã QR sẽ được hiển thị tại đây",
+  "I have transferred": "Tôi đã chuyển",
+  "Cancel": "Hủy",
   "tree": "Hệ thống",
   "transactions": "Giao dịch",
-  "status": "Trạng thái",
   "memberSince": "Thời gian tham gia",
   "walletAddress": "Địa chỉ ví",
   "fine": "Tiền phạt",
@@ -284,7 +302,6 @@
   "yes": "Có",
   "no": "Không",
   "User has generated a transaction": "User đã phát sinh giao dịch",
-  "payment error": "Thanh toán lỗi",
   "You have refused to pay": "Bạn đã từ chối thanh toán",
   "applying": "(Đang áp dụng)",
 
