--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -38,6 +38,21 @@
   "QR code will be displayed here": "QR code will be displayed here",
   "I have transferred": "I have transferred",
   "Cancel": "Cancel",
+  "Order created successfully": "Order created successfully",
+  "Failed to create order": "Failed to create order",
+  "Creating order...": "Creating order...",
+  "Payment successful!": "Payment successful!",
+  "Checking payment status...": "Checking payment status...",
+  "Checking payment...": "Checking payment...",
+  "Waiting for payment confirmation...": "Waiting for payment confirmation...",
+  "This may take a few minutes": "This may take a few minutes",
+  "Page will refresh automatically": "Page will refresh automatically",
+  "Page will refresh when you close this window": "Page will refresh when you close this window",
+  "Payment checking timeout. Please check manually later.": "Payment checking timeout. Please check manually later.",
+  "Processing payment...": "Processing payment...",
+  "Please wait": "Please wait",
+  "Close": "Close",
+  "Payment processed but failed to update. Please refresh the page.": "Payment processed but failed to update. Please refresh the page.",
   "tree": "System",
   "transactions": "Transactions",
   "memberSince": "Member since",
