--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -30,6 +30,21 @@
   "QR code will be displayed here": "Mã QR sẽ được hiển thị tại đây",
   "I have transferred": "Tôi đã chuyển",
   "Cancel": "Hủy",
+  "Order created successfully": "Tạo đơn hàng thành công",
+  "Failed to create order": "Tạo đơn hàng thất bại",
+  "Creating order...": "Đang tạo đơn hàng...",
+  "Payment successful!": "Thanh toán thành công!",
+  "Checking payment status...": "Đang kiểm tra trạng thái thanh toán...",
+  "Checking payment...": "Đang kiểm tra thanh toán...",
+  "Waiting for payment confirmation...": "Đang chờ xác nhận thanh toán...",
+  "This may take a few minutes": "Quá trình này có thể mất vài phút",
+  "Page will refresh automatically": "Trang sẽ tự động làm mới",
+  "Page will refresh when you close this window": "Trang sẽ tự động làm mới khi bạn đóng cửa sổ này",
+  "Payment checking timeout. Please check manually later.": "Hết thời gian kiểm tra thanh toán. Vui lòng kiểm tra thủ công sau.",
+  "Processing payment...": "Đang xử lý thanh toán...",
+  "Please wait": "Vui lòng đợi",
+  "Close": "Đóng",
+  "Payment processed but failed to update. Please refresh the page.": "Thanh toán đã được xử lý nhưng không thể cập nhật. Vui lòng làm mới trang.",
   "tree": "Hệ thống",
   "transactions": "Giao dịch",
   "memberSince": "Thời gian tham gia",
