done hide and tru 1$

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -711,6 +711,10 @@
   "Go to Profile": "Go to Profile",
   "Exchange rate": "Exchange rate",
   "VND Equivalent": "VND Equivalent",
+  "Withdraw Amount": "Withdraw Amount",
+  "Tax": "Tax",
+  "Transaction Fee": "Transaction Fee",
+  "Received Amount": "Received Amount",
 
   "withdrawModal": {
     "title": "Withdraw USDT",
@@ -727,8 +731,11 @@
     "loadingExchangeRate": "Loading exchange rate...",
     "exchangeRate": "Exchange Rate",
     "totalAmount": "Total Amount",
+    "withdrawalAmount": "Withdrawal Amount",
     "tax": "Tax (10%)",
+    "transactionFee": "Transaction Fee",
     "youWillReceive": "You will receive",
+    "amountTooSmall": "Amount is too small after fees",
     "cancel": "Cancel",
     "confirm": "Confirm",
     "failedToFetchExchangeRate": "Failed to fetch exchange rate"
@@ -741,8 +748,11 @@
     "cryptoWallet": "Crypto Wallet",
     "amount": "Amount",
     "exchangeRate": "Exchange Rate",
+    "totalAmountVND": "Total Amount (VND)",
     "tax": "Tax (10%)",
+    "transactionFee": "Transaction Fee",
     "received": "Received",
+    "totalReceived": "Total Amount Received",
     "bankName": "Bank Name",
     "accountName": "Account Name",
     "accountNumber": "Account Number",
