--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -797,6 +797,10 @@
   "Go to Profile": "Đi tới Hồ sơ",
   "Exchange rate": "Tỷ giá",
   "VND Equivalent": "Quy đổi VND",
+  "Withdraw Amount": "Số tiền rút",
+  "Tax": "Thuế",
+  "Transaction Fee": "Phí giao dịch",
+  "Received Amount": "Số tiền nhận",
 
   "withdrawModal": {
     "title": "Rút USDT",
@@ -813,8 +817,11 @@
     "loadingExchangeRate": "Đang tải tỷ giá...",
     "exchangeRate": "Tỷ giá",
     "totalAmount": "Tổng số tiền",
+    "withdrawalAmount": "Số tiền yêu cầu rút",
     "tax": "Thuế (10%)",
+    "transactionFee": "Phí giao dịch",
     "youWillReceive": "Bạn sẽ nhận được",
+    "amountTooSmall": "Số tiền quá nhỏ sau khi trừ phí",
     "cancel": "Hủy",
     "confirm": "Xác nhận",
     "failedToFetchExchangeRate": "Không thể tải tỷ giá"
@@ -827,8 +834,11 @@
     "cryptoWallet": "Ví tiền điện tử",
     "amount": "Số tiền",
     "exchangeRate": "Tỷ giá",
+    "totalAmountVND": "Tổng tiền (VND)",
     "tax": "Thuế (10%)",
+    "transactionFee": "Phí giao dịch",
     "received": "Số tiền nhận được",
+    "totalReceived": "Tổng tiền thực nhận",
     "bankName": "Tên ngân hàng",
     "accountName": "Tên tài khoản",
     "accountNumber": "Số tài khoản",
