--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -1,6 +1,9 @@
 {
   "emailOrUsername": "Email/User Name",
   "emailOrUsernameRequired": "Email/User Name is required",
+  "Signup": "Sign Up",
+  "User Name": "User Name",
+  "Phone": "Phone",
   "passwordRequired": "Password is required",
   "passwordPattern": "Password must contain at least 8 characters and a number",
   "confirmPassword": "Confirm Password",
@@ -78,6 +81,7 @@
   "validUrl": "Valid path",
   "duplicateInfo": "There is a duplicate information. Please check again",
   "registerSuccessful": "Please confirm your email by opening it and clicking on 'Activate Now.'",
+  "Please confirm your email by opening it and clicking on `Activate Now.`": "Please confirm your email by opening it and clicking on 'Activate Now.'",
   "userAlreadyConfirmed": "User is confirmed",
   "Recovery mail sent.Please check your mail": "Recovery mail sent. Please check your mail",
   "Login information is incorrect": "Login information is incorrect",
@@ -256,6 +260,13 @@
   "bank account name is required": "Bank account name is required",
   "bank account number": "Bank account number",
   "bank account number is required": "Bank account number is required",
+  "Account name is required": "Account name is required",
+  "Payout Display Name": "Payout Display Name",
+  "Payout Email or Phone Number": "Payout Email or Phone Number",
+  "Back to Homepage": "Back to Homepage",
+  "Search bank name": "Search bank name",
+  "No banks found": "No banks found",
+  "Optional": "Optional",
   "date of birth": "Date of birth",
   "date of birth is required": "Date of birth is required",
   "edit": "Edit",
