--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -1,5 +1,6 @@
 {
   "register": "Đăng ký",
+  "Signup": "Đăng ký",
   "login": "Đăng nhập",
   "confirm": "Xác nhận",
   "invalidUrl": "Đường dẫn không hợp lệ",
@@ -11,6 +12,7 @@
   "LOCKED": "Đã khoá",
   "profile": "Hồ sơ",
   "payment error": "Lỗi thanh toán",
+  "alreadyHaveAccount": "Đã tạo tài khoản?",
   "Total": "Tổng cộng",
   "To": "Đến",
   "Contribution Completed": "Đóng góp hoàn tất",
@@ -70,6 +72,7 @@
   "validUrl": "Đường dẫn hợp lệ",
   "duplicateInfo": "Có thông tin bị trùng.Vui lòng kiểm tra lại",
   "registerSuccessful": "Đăng ký thành công.Vui lòng kiểm tra Email của Bạn",
+  "Please confirm your email by opening it and clicking on `Activate Now.`": "Vui lòng xác nhận email của bạn bằng cách mở email và nhấp vào 'Kích hoạt ngay'.",
   "userAlreadyConfirmed": "Người dùng đã được xác nhận",
   "Recovery mail sended.Please check your mail": "Đã gửi thư khôi phục. Vui lòng kiểm tra thư của bạn",
   "Login information is incorrect": "Thông tin đăng nhập không chính xác",
@@ -230,7 +233,9 @@
   "confirm password": "Xác nhận lại mật khẩu",
   "wallet address": "Địa chỉ ví",
   "user name": "Tên tài khoản",
+  "User Name": "Tên người dùng",
   "phone": "Số điện thoại",
+  "Phone": "Số điện thoại",
   "Phone is required": "Số điện thoại là bắt buộc",
   "Please enter the correct phone format": "Vui lòng điền đúng định dạng số điện thoại",
   "Dupplicate phone": "Số điện thoại bị trùng",
@@ -254,6 +259,13 @@
   "bank account name is required": "Tên chủ tài khoản là bắt buộc",
   "bank account number": "Số tài khoản ngân hàng",
   "bank account number is required": "Số tài khoản ngân hàng là bắt buộc",
+  "Account name is required": "Tên tài khoản là bắt buộc",
+  "Payout Display Name": "Tên hiển thị thanh toán",
+  "Payout Email or Phone Number": "Email hoặc số điện thoại thanh toán",
+  "Back to Homepage": "Quay về trang chủ",
+  "Search bank name": "Tìm kiếm tên ngân hàng",
+  "No banks found": "Không tìm thấy ngân hàng nào",
+  "Optional": "Tùy chọn",
   "date of birth": "Ngày tháng năm sinh",
   "date of birth is required": "Ngày tháng năm sinh là bắt buộc",
   "edit": "Chỉnh sửa",
@@ -505,7 +517,6 @@
   "map": "Google map",
   "x": "X",
   "zalo": "Zalo",
-  "homepage": "Trang chủ",
   "legalTier": "Chính sách Tier",
   "delete successful": "Đã xoá thành công",
   "createAdmin": "Tạo Admin",
