done change claims

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -265,6 +265,7 @@
   "Payout Email or Phone Number": "Payout Email or Phone Number",
   "Back to Homepage": "Back to Homepage",
   "Search bank name": "Search bank name",
+  "Crypto withdrawal is currently disabled. Please use bank transfer.": "Crypto withdrawal is currently disabled. Please use bank transfer.",
   "No banks found": "No banks found",
   "Optional": "Optional",
   "date of birth": "Date of birth",
@@ -711,6 +712,7 @@
   "Request Withdraw": "Request Withdraw",
   "Submitting...": "Submitting...",
   "Withdraw History": "Withdraw History",
+  "Claimer": "Claimer",
   "Time": "Time",
   "Status": "Status",
   "Tx Hash": "Tx Hash",
