--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -264,6 +264,7 @@
   "Payout Email or Phone Number": "Email hoặc số điện thoại thanh toán",
   "Back to Homepage": "Quay về trang chủ",
   "Search bank name": "Tìm kiếm tên ngân hàng",
+  "Crypto withdrawal is currently disabled. Please use bank transfer.": "Rút tiền qua ví điện tử hiện đang bị tắt. Vui lòng sử dụng chuyển khoản ngân hàng.",
   "No banks found": "Không tìm thấy ngân hàng nào",
   "Optional": "Tùy chọn",
   "date of birth": "Ngày tháng năm sinh",
@@ -797,6 +798,7 @@
   "Request Withdraw": "Yêu cầu rút",
   "Submitting...": "Đang gửi...",
   "Withdraw History": "Lịch sử rút tiền",
+  "Claimer": "Người rút",
   "Time": "Thời gian",
   "Status": "Trạng thái",
   "Tx Hash": "Mã giao dịch",
