--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -540,7 +540,8 @@
       "Income": "Income",
       "Withdraws": "Withdraws",
       "Referral": "Referral",
-      "Assets": "Assets"
+      "Assets": "Assets",
+      "Support Tickets": "Support Tickets"
     }
   },
 
@@ -713,6 +714,61 @@
   "Submitting...": "Submitting...",
   "Withdraw History": "Withdraw History",
   "Claimer": "Claimer",
+  "ticket": {
+    "myTickets": "My Support Tickets",
+    "adminTickets": "Support Tickets Management",
+    "createTicket": "Create Support Ticket",
+    "subject": "Subject",
+    "subjectRequired": "Please enter subject",
+    "subjectPlaceholder": "Enter ticket subject",
+    "message": "Message",
+    "messageRequired": "Please enter message",
+    "messagePlaceholder": "Describe your issue in detail",
+    "images": "Images",
+    "maxImages": "Maximum 5 images",
+    "selectImages": "Select Images",
+    "imageHint": "Select up to 5 images (JPEG, JPG, PNG, WEBP, GIF), max 5MB each",
+    "cancel": "Cancel",
+    "submit": "Submit",
+    "submitting": "Submitting...",
+    "createdSuccessfully": "Ticket created successfully",
+    "noTickets": "No tickets found",
+    "filterByStatus": "Filter by status",
+    "all": "All",
+    "status": {
+      "pending": "Pending",
+      "inProgress": "In Progress",
+      "resolved": "Resolved",
+      "closed": "Closed"
+    },
+    "yourMessage": "Your Message",
+    "userMessage": "User Message",
+    "adminResponse": "Admin Response",
+    "replyToTicket": "Reply to Ticket",
+    "updateResponse": "Update Response",
+    "responseRequired": "Please enter response",
+    "responsePlaceholder": "Enter your response",
+    "sendReply": "Send Reply",
+    "replySent": "Reply sent successfully",
+    "sending": "Sending...",
+    "reply": "Reply",
+    "markResolved": "Mark as Resolved",
+    "markedResolved": "Ticket marked as resolved",
+    "closeTicket": "Close Ticket",
+    "closed": "Ticket closed",
+    "confirmResolve": "Are you sure you want to mark this ticket as resolved?",
+    "confirmClose": "Are you sure you want to close this ticket?",
+    "back": "Back",
+    "createdAt": "Created At",
+    "repliedAt": "Replied At",
+    "resolvedAt": "Resolved At",
+    "by": "by",
+    "user": "User",
+    "email": "Email",
+    "userInfo": "User Information",
+    "searchPlaceholder": "Search by subject, message, user name or email",
+    "image": "image"
+  },
   "Time": "Time",
   "Status": "Status",
   "Tx Hash": "Tx Hash",
