--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -624,7 +624,8 @@
       "Income": "Thu nhập",
       "Withdraws": "Rút tiền",
       "Referral": "Giới thiệu",
-      "Assets": "Tài sản"
+      "Assets": "Tài sản",
+      "Support Tickets": "Yêu cầu hỗ trợ"
     }
   },
 
@@ -799,6 +800,61 @@
   "Submitting...": "Đang gửi...",
   "Withdraw History": "Lịch sử rút tiền",
   "Claimer": "Người rút",
+  "ticket": {
+    "myTickets": "Yêu cầu hỗ trợ của tôi",
+    "adminTickets": "Quản lý yêu cầu hỗ trợ",
+    "createTicket": "Tạo yêu cầu hỗ trợ",
+    "subject": "Tiêu đề",
+    "subjectRequired": "Vui lòng nhập tiêu đề",
+    "subjectPlaceholder": "Nhập tiêu đề yêu cầu hỗ trợ",
+    "message": "Nội dung",
+    "messageRequired": "Vui lòng nhập nội dung",
+    "messagePlaceholder": "Mô tả chi tiết vấn đề của bạn",
+    "images": "Hình ảnh",
+    "maxImages": "Tối đa 5 hình ảnh",
+    "selectImages": "Chọn hình ảnh",
+    "imageHint": "Chọn tối đa 5 hình ảnh (JPEG, JPG, PNG, WEBP, GIF), mỗi hình tối đa 5MB",
+    "cancel": "Hủy",
+    "submit": "Gửi",
+    "submitting": "Đang gửi...",
+    "createdSuccessfully": "Tạo yêu cầu hỗ trợ thành công",
+    "noTickets": "Chưa có yêu cầu hỗ trợ nào",
+    "filterByStatus": "Lọc theo trạng thái",
+    "all": "Tất cả",
+    "status": {
+      "pending": "Đang chờ",
+      "inProgress": "Đang xử lý",
+      "resolved": "Đã giải quyết",
+      "closed": "Đã đóng"
+    },
+    "yourMessage": "Tin nhắn của bạn",
+    "userMessage": "Tin nhắn từ người dùng",
+    "adminResponse": "Phản hồi từ admin",
+    "replyToTicket": "Phản hồi yêu cầu hỗ trợ",
+    "updateResponse": "Cập nhật phản hồi",
+    "responseRequired": "Vui lòng nhập phản hồi",
+    "responsePlaceholder": "Nhập phản hồi của bạn",
+    "sendReply": "Gửi phản hồi",
+    "replySent": "Phản hồi đã được gửi",
+    "sending": "Đang gửi...",
+    "reply": "Phản hồi",
+    "markResolved": "Đánh dấu đã giải quyết",
+    "markedResolved": "Đã đánh dấu là đã giải quyết",
+    "closeTicket": "Đóng yêu cầu",
+    "closed": "Đã đóng yêu cầu",
+    "confirmResolve": "Bạn có chắc chắn muốn đánh dấu yêu cầu này là đã giải quyết?",
+    "confirmClose": "Bạn có chắc chắn muốn đóng yêu cầu này?",
+    "back": "Quay lại",
+    "createdAt": "Ngày tạo",
+    "repliedAt": "Ngày phản hồi",
+    "resolvedAt": "Ngày giải quyết",
+    "by": "bởi",
+    "user": "Người dùng",
+    "email": "Email",
+    "userInfo": "Thông tin người dùng",
+    "searchPlaceholder": "Tìm kiếm theo tiêu đề, nội dung, tên người dùng hoặc email",
+    "image": "hình ảnh"
+  },
   "Time": "Thời gian",
   "Status": "Trạng thái",
   "Tx Hash": "Mã giao dịch",
