done fix new oayment

--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -1425,5 +1425,10 @@
       "SUCCESS": "Thành công",
       "ERROR": "Lỗi"
     }
-  }
+  },
+  "REGIDTRATION & MANAGEMENT FEE": "Phí đăng ký và quản lý",
+  "COMMUNITY REWARD": "Thưởng cộng đồng",
+  "REWARD POOL": "Quỹ thưởng",
+  "EXCHANGE FOR HEWE": "Quy đổi sang HEWE",
+  "COMMUNITY SUPPORT REWARD": "Hỗ trợ cộng đồng"
 }
