fix loi chinh ta

--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -1435,9 +1435,9 @@
   "Enable Withdraw - Crypto": "Bật rút tiền - Crypto",
   "Enable Withdraw - Bank": "Bật rút tiền - Ngân hàng",
   "No payment methods available": "Không có phương thức thanh toán nào",
-  "REGIDTRATION & MANAGEMENT FEE": "Phí đăng ký và quản lý",
+  "REGISTRATION & MANAGEMENT FEE": "Phí đăng ký và quản lý",
   "COMMUNITY REWARD": "Thưởng cộng đồng",
   "REWARD POOL": "Quỹ thưởng",
   "EXCHANGE FOR HEWE": "Quy đổi sang HEWE",
-  "COMMUNITY SUPPORT REWARD": "Hỗ trợ cộng đồng"
+  "COMMUNITY SUPPORT REWARDS": "Hỗ trợ cộng đồng"
 }
