--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -1435,6 +1435,13 @@
   "Enable Withdraw - Crypto": "Bật rút tiền - Crypto",
   "Enable Withdraw - Bank": "Bật rút tiền - Ngân hàng",
   "No payment methods available": "Không có phương thức thanh toán nào",
+  "paymentTerms": {
+    "title": "Nội quy và cam kết",
+    "contentPlaceholder": "Nội dung sẽ được thêm vào đây...",
+    "agreeText": "Tôi đã đọc và đồng ý với các điều khoản và cam kết",
+    "confirm": "Xác nhận",
+    "cancel": "Hủy"
+  },
   "REGISTRATION & MANAGEMENT FEE": "Phí đăng ký và quản lý",
   "COMMUNITY REWARD": "Thưởng cộng đồng",
   "REWARD POOL": "Quỹ thưởng",
