--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -1354,5 +1354,6 @@
     "agreeText": "I have read and agree",
     "confirm": "Confirm",
     "cancel": "Cancel"
-  }
+  },
+  "status": "Status"
 }
