--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -1446,5 +1446,6 @@
   "COMMUNITY REWARD": "Thưởng cộng đồng",
   "REWARD POOL": "Quỹ thưởng",
   "EXCHANGE FOR HEWE": "Quy đổi sang HEWE",
-  "COMMUNITY SUPPORT REWARDS": "Hỗ trợ cộng đồng"
+  "COMMUNITY SUPPORT REWARDS": "Hỗ trợ cộng đồng",
+  "status": "Trạng thái"
 }
