--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -646,7 +646,8 @@
       "lockKyc": "Lock KYC",
       "unlockKyc": "Unlock KYC",
       "pushToPreTier2": "Push to Pre-Tier 2",
-      "changeWallet": "Change Wallet"
+      "changeWallet": "Change Wallet",
+      "createWildCard": "Create Wild Card"
     },
     "switches": {
       "openLah": "Open LAH",
@@ -676,8 +677,23 @@
       "totalChild": "Total Child",
       "subInfo": "Sub Information"
     },
+    "wildCard": {
+      "cardType": "Card Type",
+      "days": "Days",
+      "daysPlaceholder": "Enter number of days",
+      "targetTier": "Target Tier",
+      "sourceInfo": "Source Info",
+      "sourceInfoPlaceholder": "Enter source information (optional)",
+      "createSuccess": "Wild Card created successfully!",
+      "createError": "An error occurred while creating Wild Card",
+      "errors": {
+        "invalidDays": "Please enter a valid number of days (greater than 0)",
+        "invalidTier": "Please select a valid tier (1 or 2)"
+      }
+    },
     "modals": {
       "deleteConfirm": "Are you sure to do this?",
+      "createWildCardTitle": "Create Wild Card for {{userId}}",
       "changeWalletConfirm": "Are you sure to do this",
       "updating": "Updating...",
       "deleting": "Deleting..."
