--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -796,6 +796,26 @@
   "Wallet": "Wallet",
   "Bank transfer": "Bank transfer",
   "Please add your wallet address": "Please add your wallet address",
+  "ID Card Images": "ID Card Images",
+  "Upload front and back images of your ID card for admin verification": "Upload front and back images of your ID card for admin verification",
+  "Front of ID Card": "Front of ID Card",
+  "Back of ID Card": "Back of ID Card",
+  "Upload Image": "Upload Image",
+  "Change Image": "Change Image",
+  "Remove": "Remove",
+  "No image uploaded": "No image uploaded",
+  "Upload Images": "Upload Images",
+  "You can only upload once. Please contact admin to update.": "You can only upload once. Please contact admin to update.",
+  "Image uploaded. Contact admin to update.": "Image uploaded. Contact admin to update.",
+  "Front image already uploaded. You can only upload once.": "Front image already uploaded. You can only upload once.",
+  "Back image already uploaded. You can only upload once.": "Back image already uploaded. You can only upload once.",
+  "Download": "Download",
+  "Delete": "Delete",
+  "Are you sure you want to delete this image?": "Are you sure you want to delete this image?",
+  "Image deleted successfully": "Image deleted successfully",
+  "Image downloaded successfully": "Image downloaded successfully",
+  "Failed to download image": "Failed to download image",
+  "No image to download": "No image to download",
   "Go to Profile": "Go to Profile",
   "Exchange rate": "Exchange rate",
   "VND Equivalent": "VND Equivalent",
