--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -881,6 +881,26 @@
   "Withdraw method": "Phương thức rút",
   "Wallet": "Ví",
   "Bank transfer": "Chuyển khoản ngân hàng",
+  "ID Card Images": "Ảnh căn cước công dân",
+  "Upload front and back images of your ID card for admin verification": "Tải lên ảnh mặt trước và mặt sau căn cước công dân để admin kiểm tra",
+  "Front of ID Card": "Mặt trước căn cước",
+  "Back of ID Card": "Mặt sau căn cước",
+  "Upload Image": "Tải ảnh lên",
+  "Change Image": "Đổi ảnh",
+  "Remove": "Xóa",
+  "No image uploaded": "Chưa có ảnh",
+  "Upload Images": "Tải ảnh lên",
+  "You can only upload once. Please contact admin to update.": "Bạn chỉ được upload 1 lần. Vui lòng liên hệ admin để cập nhật.",
+  "Image uploaded. Contact admin to update.": "Ảnh đã được tải lên. Liên hệ admin để cập nhật.",
+  "Front image already uploaded. You can only upload once.": "Ảnh mặt trước đã được tải lên. Bạn chỉ được upload 1 lần.",
+  "Back image already uploaded. You can only upload once.": "Ảnh mặt sau đã được tải lên. Bạn chỉ được upload 1 lần.",
+  "Download": "Tải xuống",
+  "Delete": "Xóa",
+  "Are you sure you want to delete this image?": "Bạn có chắc chắn muốn xóa ảnh này?",
+  "Image deleted successfully": "Xóa ảnh thành công",
+  "Image downloaded successfully": "Tải ảnh xuống thành công",
+  "Failed to download image": "Tải ảnh xuống thất bại",
+  "No image to download": "Không có ảnh để tải xuống",
   "Please add your wallet address": "Vui lòng bổ sung địa chỉ ví",
   "Go to Profile": "Đi tới Hồ sơ",
   "Exchange rate": "Tỷ giá",
